--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,13 @@
   --shadow-custom: 0 6px 24px 3px rgba(0, 0, 0, 0.15);
 }
 
+html,
 body {
-  font-family: var(--font-body);
- 
-  background-color: #ffffff;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
-
-
-
-
+body {
+  font-family: var(--font-body);
+  background-color: #ffffff;
+}
